--- a/styles/mystyle.css
+++ b/styles/mystyle.css
@@ -40,6 +40,9 @@ th{
   text-align: center;
   border: 1.5px solid #ddd;
 }
+.active{
+  color:#222;
+}
 
 
 .logo{
@@ -55,4 +58,8 @@ img
   border-radius: 100%;
   width: 50px;
   height:50px;
+}
+
+table{
+  margin-bottom: 50px!important;
 }
