search start at 2nd char

--- a/styles/mystyle.css
+++ b/styles/mystyle.css
@@ -51,10 +51,12 @@ img
 }
 
 table, tbody, tr{
-  margin-bottom: 50px!important;
+  margin-bottom: 100px!important;
   width:100%!important;
-
 }
+
+tr{
+border-spacing:200px;}
 
 
 .on{
@@ -103,4 +105,8 @@ a{
 }
 td{
   padding:0;
+}
+
+input:focus{
+  color: #222;
 }
